# learn-langchain-jupyter

./: .gitignore  docker-compose.yml  get_meituan_question.py  main.py  pyproject.toml  一、langchain快速上手.ipynb  七、大模型网络.ipynb  三、扩展机器人的能力边界.ipynb  二、构建专属聊天机器人.ipynb  五、RAG智能问答系统实战.ipynb  六、Ollama.ipynb  四、使用 Embedding 实现自然语言搜索.ipynb
resources/: meituan_faq.txt
